<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChecklistBox</string>
    <string name="fragment_title_home">ホーム</string>
    <string name="fragment_title_stock">保存</string>
    <string name="fragment_title_history">履歴</string>
    <string name="fragment_title_categoryedit">フォルダ編集</string>
    <string name="fragment_title_settings">設定</string>
    <string name="action_add">新規追加</string>
    <string name="action_move">順番移動</string>
    <string name="action_sort">表示順変更</string>
    <string name="action_settings">設定</string>
    <string name="category_name_daily">日常生活</string>
    <string name="category_name_buisiness">仕事関連</string>
    <string name="category_name_travel">旅行関連</string>
    <string name="drawer_open">開く</string>
    <string name="drawer_close">閉じる</string>
    <string name="checklist_row_expdate">実施日 : </string>
    <string name="checklist_row_credate">作成日 : </string>
    <string name="checklist_row_findate">完了日 : </string>
    <string name="checklist_row_node_fin_qty">未完了数/項目数 : </string>
    <string name="checklist_row_nodeqty">項目数 : </string>
    <string name="checklist_addview_hint">決定ボタンで追加</string>
    <string name="checklist_imageview_desc">ドラッグで移動</string>
    <string name="conmenu_home_title">メニュー</string>
    <string name="conmenu_edit">編集</string>
    <string name="conmenu_delete">削除</string>
    <string name="conmenu_stock">保存</string>
    <string name="conmenu_tohome">ホームに追加</string>
    <string name="dialog_edit_home_title">※未使用</string>
    <string name="dialog_edit_stock_title">※未使用</string>
    <string name="dialog_title_clist_edit_home">編集（ホーム）</string>
    <string name="dialog_title_clist_edit_stock">編集（ストック）</string>
    <string name="dialog_title_clist_delete_home">削除（ホーム）</string>
    <string name="dialog_title_clist_delete_stock">削除（ストック）</string>
    <string name="dialog_title_clist_delete_history">削除（履歴）</string>
    <string name="dialog_title_clist_create_home">新規作成（ホーム）</string>
    <string name="dialog_title_clist_create_stock">新規作成（ストック）</string>
    <string name="dialog_title_clist_store_home">保存（ホーム）</string>
    <string name="dialog_title_clist_store_history">保存（履歴）</string>
    <string name="dialog_title_clist_copy_stock">ホームに追加（ストック）</string>
    <string name="dialog_title_clist_copy_history">ホームに追加（履歴）</string>
    <string name="dialog_title_clist_complete">チェック完了</string>
    <string name="dialog_title_node_delete">削除</string>
    <string name="dialog_title_to_categoryedit">フォルダ編集</string>
    <string name="dialog_message_to_categoryedit">フォルダ編集画面に移動しますか？</string>
    <string name="dialog_button_to_categoryedit_yes">移動</string>
    <string name="dialog_button_to_categoryedit_no">キャンセル</string>
    <string name="dialog_message_clist_delete">削除しますか？</string>
    <string name="dialog_message_node_delete">削除しますか？</string>
    <string name="dialog_label_clist_title">タイトル</string>
    <string name="dialog_label_clist_memo">メモ</string>
    <string name="dialog_label_clist_expdate">実施日</string>
    <string name="dialog_label_clist_credate">作成日</string>
    <string name="dialog_label_clist_findate">完了日</string>
    <string name="dialog_label_clist_category">フォルダ</string>
    <string name="dialog_button_clist_create">作成</string>
    <string name="dialog_button_clist_update">更新</string>
    <string name="dialog_button_clist_save">保存</string>
    <string name="dialog_button_clist_tohome">ホームに追加</string>
    <string name="dialog_button_clist_delete">削除</string>
    <string name="dialog_button_clist_cansel">キャンセル</string>
    <string name="dialog_button_clist_change">変更</string>
    <string name="dialog_button_node_delete">削除</string>
    <string name="dialog_button_node_cansel">キャンセル</string>
    <string name="dialog_radio_sort_sortno">任意の並び順</string>
    <string name="dialog_radio_sort_expdate_asc">実施日(昇順)</string>
    <string name="dialog_radio_sort_expdate_desc">実施日(降順)</string>
    <string name="dialog_radio_sort_check_off">任意の並び順</string>
    <string name="dialog_radio_sort_check_down">完了済を下に</string>
    <string name="dialog_title_category_delete">フォルダ削除</string>
    <string name="dialog_message_category_delete">フォルダを削除します</string>
    <string name="dialog_message_clist_complete">リストを完了し、履歴に送りますか？</string>
    <string name="dialog_message_category_notdelete">フォルダが１つしかないため、削除できません</string>
    <string name="dialog_label_category_delete_move">保持しているチェックリストの移動先</string>
    <string name="dialog_label_category_delete_delete">チェックリストを削除</string>
    <string name="dialog_label_clist_complete_confirm">以降、確認画面を表示しない</string>
    <string name="dialog_button_category_delete">削除</string>
    <string name="dialog_button_category_cansel">キャンセル</string>
    <string name="dialog_button_clist_complete">完了</string>
    <string name="setting_title_category_view">表示設定</string>
    <string name="setting_title_checklist_2_home">ホーム画面のサマリー表示項目</string>
    <string name="setting_title_checklist_2_stock">保存画面のサマリー表示項目</string>
    <string name="setting_title_checklist_2_history">履歴画面のサマリー表示項目</string>
    <string name="setting_title_category_operation">動作設定</string>
    <string name="setting_title_stock_init">保存チェックリストの初期表示状態</string>
    <string name="setting_title_category_other">その他</string>
    <string name="setting_title_history_delete">履歴の削除設定</string><!-- ここはswitch -->
    <string name="setting_description_history_delete">履歴チェックリストの自動削除を行う</string>
    <string name="setting_title_history_delete_date">履歴削除日数</string>
    <string name="setting_title_clist_complete_confirm">チェックリスト完了時の確認画面</string>

<!--
　　▽表示
　　・（後ほど）文字サイズ
　　・各画面チェックリストの２行目
　　　・ホーム：メモ・実施日・未完了数/完了数
　　　・保存：メモ・保存日・項目数
　　　・履歴：メモ・完了日・項目数
　　▽動作設定
　　・保存リストの初期状態　：　全開・全閉じ・上だけ開き
　　・初期ソート
　　　・ホーム：実施日・任意
　　　・保存：任意のみ
　　　・履歴：完了日のみ
　　　・チェックリスト：完了済みを下・任意
　　▽その他
　　・履歴削除関連
　　　・履歴自動削除　ON/OFF
　　　・履歴削除日数　7日以前/14日以前/30日以前/90日以前
     -->

</resources>
