<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_message_category_delete"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edt_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="16"
        />

    <CheckBox
        android:id="@+id/cbx_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_label_category_delete_delete"
        />

    <TextView
        android:id="@+id/tv_label_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_label_category_delete_move"
        />

    <Spinner
        android:id="@+id/spn_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
